# legi_blog

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: cards.rs  definitions.rs  fetch_articles.rs  main.rs  post_articles.rs
backend/src/fetch_articles/: cards.rs  get_article.rs
backend/src/post_articles/: add_article.rs  add_tag.rs  attach_tag.rs  definitions.rs
backend/src/utils/: time.rs
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: header.tsx  layout.tsx  page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/blog/articles/[article_id]/: page.tsx
frontend/src/app/lib/: definitions.tsx  fetch_cards.tsx
frontend/src/app/ui/blog/: blog-header.tsx  blogcard.tsx
