[package]
name = "legi_blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-macros = "0.5.0"
chrono = { version = "0.4.41", features = ["alloc"] }
futures-util = { version = "0.3.31", features = ["tokio-io"] }
markdown = "1.0.0"
mongodb = "3.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v7"] }
